--- a/day06/DjangoLearn/templates/djangoindex.html
+++ b/day06/DjangoLearn/templates/djangoindex.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Django自带的模板</title>
 </head>
 <body>
+
+    <h1>Hello world</h1>
 
 </body>
 </html>
